[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/tree-tools/Nodes/SubNodes/Scripts/dialog_option_block.gd" type="Script" id=1]

[node name="option" type="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 24.0
margin/right = 253.0
margin/bottom = 160.0
custom_constants/separation = 5
alignment = 0
script/script = ExtResource( 1 )
block_to_collapse_path = NodePath("vbox_params")

[node name="hbox" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 20.0
alignment = 0

[node name="id" type="Label" parent="hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 8.0
margin/bottom = 17.0
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_hide" type="Button" parent="hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 0.0
margin/right = 34.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "H"
flat = false

[node name="vbox_line" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 250.0
margin/bottom = 49.0
alignment = 0
__meta__ = {
"__editor_plugin_screen__": "Script",
"__editor_plugin_states__": {
"2D": {
"ofs": Vector2( -125.191, -103.952 ),
"snap_grid": false,
"snap_offset": Vector2( 0, 0 ),
"snap_pixel": false,
"snap_relative": false,
"snap_rotation": false,
"snap_rotation_offset": 0.0,
"snap_rotation_step": 0.261799,
"snap_show_grid": false,
"snap_step": Vector2( 10, 10 ),
"zoom": 1.67018
},
"3D": {
"ambient_light_color": Color( 0.15, 0.15, 0.15, 1 ),
"default_light": true,
"default_srgb": false,
"deflight_rot_x": 0.942478,
"deflight_rot_y": 0.628319,
"fov": 45.0,
"show_grid": true,
"show_origin": true,
"viewport_mode": 1,
"viewports": [ {
"distance": 4.0,
"listener": true,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
}, {
"distance": 4.0,
"listener": false,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
}, {
"distance": 4.0,
"listener": false,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
}, {
"distance": 4.0,
"listener": false,
"pos": Vector3( 0, 0, 0 ),
"use_environment": false,
"use_orthogonal": false,
"x_rot": 0.0,
"y_rot": 0.0
} ],
"zfar": 500.0,
"znear": 0.1
}
},
"__editor_run_settings__": {
"custom_args": "-l $scene",
"run_mode": 0
},
"__editor_show_subtree": true
}

[node name="box_say" type="VBoxContainer" parent="vbox_line"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 24.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="vbox_line/box_say"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 24.0
alignment = 0

[node name="text" type="LineEdit" parent="vbox_line/box_say/HBoxContainer"]

rect/min_size = Vector2( 250, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="vbox_params" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 54.0
margin/right = 250.0
margin/bottom = 127.0
alignment = 0

[node name="repeat" type="CheckBox" parent="vbox_params"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Repeat"
flat = false
align = 0

[node name="not_said" type="CheckBox" parent="vbox_params"]

visibility/visible = false
hint/tooltip = "Check if you "
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 27.0
margin/right = 288.0
margin/bottom = 50.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Choice only, not said"
flat = false
align = 0

[node name="condition_label" type="Label" parent="vbox_params"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 27.0
margin/right = 250.0
margin/bottom = 41.0
text = "Visible on Condition"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="condition" type="LineEdit" parent="vbox_params"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 45.0
margin/right = 250.0
margin/bottom = 69.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="spacer" type="Control" parent="vbox_params"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 73.0
margin/right = 250.0
margin/bottom = 73.0

[node name="HSeparator" type="HSeparator" parent="."]

rect/min_size = Vector2( 230, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 132.0
margin/right = 250.0
margin/bottom = 135.0


